--- a/app.html
+++ b/app.html
@@ -24,8 +24,8 @@ const userFirebaseConfig = {
   projectId: "agmm-16a91",
   storageBucket: "agmm-16a91.firebasestorage.app",
   messagingSenderId: "784096179999",
-  appId: "1:784096179999:web:239ebaf0547bd88e24622a",
-  measurementId: "G-B56XH56SLB"
+  appId: "1:784096179999:web:68597a2a52a668e224622a",
+  measurementId: "G-9K9X7QT5SS"
 };
 
 // Usa a config do ambiente se existir, senão usa a fornecida
