--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 
         // --- CONFIGURAÇÃO GERAL ---
         const appId = 'sistema-avaliacao-pautas';
+        
+        // LISTA DE SUPER ADMINS (E-mails que sempre terão acesso total)
+        const SUPER_ADMINS = ['sabrinacruz.mkt@gmail.com'];
 
         // Configuração do Firebase (Atualizada com suas chaves)
         const firebaseConfig = {
@@ -172,11 +175,14 @@
                     if (isRegistering) {
                         const userCredential = await createUserWithEmailAndPassword(auth, email, password);
                         const user = userCredential.user;
+                        // Se o email for do super admin, já cria como admin true
+                        const isSuper = SUPER_ADMINS.includes(email);
+                        
                         await setDoc(doc(db, getPublicCollectionPath('funcionarios'), user.uid), {
                             id: user.uid,
                             nome: name,
                             email: email,
-                            isAdmin: false, 
+                            isAdmin: isSuper, 
                             cargoId: '', 
                             clienteIds: [],
                             timestamp: serverTimestamp()
