--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
         // --- CONFIGURAÇÃO ---
         const appId = 'sistema-avaliacao-pautas';
+        
+        // LISTA DE SUPER ADMINS - Garante acesso total independente do banco
         const SUPER_ADMINS = ['sabrinacruz.mkt@gmail.com'];
+        
         const firebaseConfig = {
             apiKey: "AIzaSyBZ76yd8RbRQVjbJ115QqL3oDztxedq0OY",
             authDomain: "agmm-16a91.firebaseapp.com",
@@ -129,8 +132,8 @@
                 setError('');
                 try {
                     if (isRegistering) {
-                        // Registro básico para primeiro acesso (opcional na tela inicial)
                         const cred = await createUserWithEmailAndPassword(auth, email, password);
+                        // Força admin se for o email do super admin
                         const isSuper = SUPER_ADMINS.includes(email);
                         await setDoc(doc(db, `artifacts/${appId}/public/data/funcionarios`, cred.user.uid), {
                             id: cred.user.uid, nome: name, email: email, isAdmin: isSuper, cargoId: '', clienteIds: [], timestamp: serverTimestamp()
@@ -138,7 +141,6 @@
                     } else {
                         await signInWithEmailAndPassword(auth, email, password);
                     }
-                    // Sucesso: O onAuthStateChanged no App assumirá o controle
                 } catch (err) {
                     setError("Erro: " + err.message);
                     setLoading(false);
@@ -330,7 +332,14 @@
                         <Card title="Novo Lançamento" icon={Plus}>
                             <form onSubmit={handleSubmit} className="space-y-4">
                                 <div><label className="text-xs font-bold text-gray-500">Cliente</label><select className="w-full border rounded p-2" value={form.cliId} onChange={e=>setForm({...form, cliId:e.target.value})}><option value="">Selecione...</option>{myClis.map(c=><option key={c.id} value={c.id}>{c.nome}</option>)}</select></div>
-                                <div><label className="text-xs font-bold text-gray-500">Atividade</label><select className="w-full border rounded p-2" value={form.atvId} onChange={e=>setForm({...form, atvId:e.target.value})} required><option value="">Selecione...</option>{myAtvs.map(a=><option key={a.id} value={a.id}>{a.nome}</option>)}</select></div>
+                                <div>
+                                    <label className="text-xs font-bold text-gray-500">Atividade</label>
+                                    <select className="w-full border rounded p-2" value={form.atvId} onChange={e=>setForm({...form, atvId:e.target.value})} required>
+                                        <option value="">Selecione...</option>
+                                        {/* MOSTRA APENAS O NOME, SEM PONTOS */}
+                                        {myAtvs.map(a=><option key={a.id} value={a.id}>{a.nome}</option>)}
+                                    </select>
+                                </div>
                                 <Input label="Data" type="date" value={form.date} onChange={e=>setForm({...form, date:e.target.value})} required />
                                 <Button className="w-full">Lançar</Button>
                             </form>
@@ -415,8 +424,8 @@
                             if(SUPER_ADMINS.includes(data.email)) data.isAdmin = true;
                             setProfile(data);
                         } else {
-                            // Fallback de perfil vazio para não travar o login
-                            setProfile({ id: user.uid, nome: 'Usuário', email: 'email', isAdmin: false });
+                            // Fallback seguro para não quebrar a UI
+                            setProfile({ id: user.uid, nome: user.email || 'Usuário', email: user.email || '', isAdmin: false });
                         }
                         setLoading(false);
                     });
@@ -434,7 +443,11 @@
             const filteredLancs = useMemo(() => lancs.filter(l => !l.dataConclusao || l.dataConclusao.startsWith(month)), [lancs, month]);
             const filteredFlags = useMemo(() => flags.filter(f => !f.data || f.data.startsWith(month)), [flags, month]);
 
-            const handleRoleSelect = (role) => setTargetRole(role);
+            const handleRoleSelect = async (role) => {
+                setTargetRole(role); 
+                setLoading(false); // Permite mostrar a tela de login
+            };
+
             const handleLogout = () => { signOut(auth); setTargetRole(null); };
 
             if(loading) return <div className="flex h-screen items-center justify-center font-bold text-indigo-600 animate-pulse">Carregando...</div>;
